mac: Fix bookmark drag and drop.

The NSPasteboardItem that represents the dragged item needs to include all the
usual pasteboard types associated with URLs. This was broken in a recent
refactor that removed the use of a deprecated APIs.

BUG=600295

Review URL: https://codereview.chromium.org/1854223002

Cr-Commit-Position: refs/heads/master@{#385210}

Former-commit-id: 5c3e79fe151cef7f1ca259a81a655131fdb8b8d6