chrome/browser/ui/cocoa/bookmarks/bookmark_bar_folder_controller.mm
@@ -1333,10 +1333,11 @@ static BOOL ValueInRangeInclusive(CGFloat low, CGFloat value, CGFloat high) {
 
 #pragma mark BookmarkButtonDelegate Protocol
 
-- (void)fillPasteboard:(NSPasteboard*)pboard
-       forDragOfButton:(BookmarkButton*)button {
-  [[self folderTarget] fillPasteboard:pboard forDragOfButton:button];
+- (NSPasteboardItem*)pasteboardItemForDragOfButton:(BookmarkButton*)button {
+  return [[self folderTarget] pasteboardItemForDragOfButton:button];
+}
 
+- (void)willBeginPasteboardDrag {
   // Close our folder menu and submenus since we know we're going to be dragged.
   [self closeBookmarkFolder:self];
 }
